<resources>
    <string name="_guessulike">您的专属推荐</string>
    <string name="_maohao">:</string>
    <string name="_mustbuy">今日必买</string>
    <string name="_mustbuytip">超多精品等你来</string>
    <string name="abandon_exchange_character">放弃兑换</string>
    <string name="about">约</string>
    <string name="about_env">网络环境</string>
    <string name="about_env_normal">正式环境</string>
    <string name="about_env_test">测试环境</string>
    <string name="about_imsdk">IMSDK版本</string>
    <string name="about_log">日志等级</string>
    <string name="about_qalsdk">QAL版本</string>
    <string name="about_set_effect">设置成功，杀进程重启后生效</string>
    <string name="about_title">关于</string>
    <string name="about_tlssdk">TLS版本</string>
    <string name="about_us">关于我们</string>
    <string name="above">以上</string>
    <string name="accept_new_message_notify">消息推送设置</string>
    <string name="account_and_safe">账号与安全</string>
    <string name="account_money">账户余额</string>
    <string name="account_not_safe_message">你还没有绑定手机号和设置支付密码,为了账户安全,请到我的酒仙-我的信息-账号与安全完成设置后再进行兑换</string>
    <string name="account_not_seting_pay_pwd_message">您还没有设置支付密码,为了账户安全,请到我的酒仙-账号与安全-支付密码完成设置后再进行兑换</string>
    <string name="account_safe">账户安全</string>
    <string name="accounts_account_no_binding">请先绑定手机号</string>
    <string name="accounts_real_name_desc">认证后抢券、领取兑换码酒品更快捷，账户更安全</string>
    <string name="accounts_real_name_state">认证有礼</string>
    <string name="accounts_real_name_success_msg">请在我的酒仙-优惠券中使用</string>
    <string name="accounts_real_name_success_title">优惠券奖励到账！</string>
    <string name="accounts_real_name_tv">实名认证</string>
    <string name="accounts_real_name_verified">查看信息</string>
    <string name="accounts_safety_info">您使用了虚拟财产，为了保障您的账户安全，请进行安全验证</string>
    <string name="accounts_safety_password">请输入支付密码</string>
    <string name="accounts_safety_verification">安全验证</string>
    <string name="action_bar_back">返回</string>
    <string name="activate">激活</string>
    <string name="activity">活动</string>
    <string name="activity_title">活动</string>
    <string name="add_cart_success">成功加入购物车</string>
    <string name="add_comment">评价晒单</string>
    <string name="add_comment_title">评价晒单</string>
    <string name="add_detail_ID">帐号ID</string>
    <string name="add_detail_group">分组</string>
    <string name="add_detail_message">附加消息</string>
    <string name="add_detail_name">备注名</string>
    <string name="add_dialog_null">分组名称不能为空</string>
    <string name="add_dialog_subtitle">请输入新分组的名称</string>
    <string name="add_dialog_title">添加分组</string>
    <string name="add_friend_added">已添加好友</string>
    <string name="add_friend_del_black_err">移出黑名单失败</string>
    <string name="add_friend_del_black_list">添加失败，该用户在你的黑名单中，是否将该用户从黑名单中移除（你需要在移除成功后重发添加好友请求）</string>
    <string name="add_friend_del_black_succ">移出黑名单成功</string>
    <string name="add_friend_error">添加好友失败，请稍后重试</string>
    <string name="add_friend_refuse_all">对方拒绝添加任何人为好友</string>
    <string name="add_friend_send">发送添加好友请求</string>
    <string name="add_friend_succeed">请求已发送</string>
    <string name="add_friend_to_blacklist">我在对方的黑名单中</string>
    <string name="add_group_error">添加分组失败</string>
    <string name="add_group_error_existed">添加失败，分组已存在</string>
    <string name="add_group_error_limit">添加失败，分组达到上限</string>
    <string name="add_group_succ">添加分组成功</string>
    <string name="add_new_address">添加新地址</string>
    <string name="add_new_address_select_contacts">选联系人</string>
    <string name="add_new_address_select_contacts_Error">读取手机联系人失败，可能酒仙网已被禁止该权限</string>
    <string name="add_new_group">添加分组</string>
    <string name="add_product_to_cart">加入购物车</string>
    <string name="add_receive_address">新增收货地址</string>
    <string name="add_success">添加成功</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="add_to_cart_success">商品已添加到购物车</string>
    <string name="addcoupon">添加优惠券</string>
    <string name="addfriend">添加好友</string>
    <string name="address_choose_other">选择其他地址</string>
    <string name="address_choose_title">配送至</string>
    <string name="address_detail">详细地址</string>
    <string name="address_detail_can_not_be_empty">详细地址不能为空</string>
    <string name="address_detail_max_50">详细地址最多支持50字</string>
    <string name="address_manager">地址管理</string>
    <string name="address_menager">地址管理</string>
    <string name="address_mobile_max_limit">最多输入11位</string>
    <string name="affirm_new_pwd_input_hint">确认新密码</string>
    <string name="affirm_pwd_input_hint">确认密码</string>
    <string name="after_days_commend">天后追评</string>
    <string name="again_capture">重新拍摄</string>
    <string name="again_obtain_graph_check_code">请重新获取图形验证码！</string>
    <string name="agree">同意</string>
    <string name="agreed">已同意</string>
    <string name="alipay_account">支付宝</string>
    <string name="alipay_description">酒仙网移动客户端(Android)</string>
    <string name="alipay_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。

点击确定，立即安装。"</string>
    <string name="alipay_name">订单号:</string>
    <string name="all">全部</string>
    <string name="already_bind">已绑定</string>
    <string name="anagin_capture">重新拍摄</string>
    <string name="app_name">酒仙网</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="app_tip">提示</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="append_comment_title">追加评价</string>
    <string name="application_debug_error">release版本请关闭调试模式</string>
    <string name="approve_address">默认</string>
    <string name="average_tree_age">平均葡萄树年龄</string>
    <string name="back_money">返现</string>
    <string name="badge_collection">集徽章</string>
    <string name="baike_address">产区</string>
    <string name="baike_breed">酿酒葡萄品种</string>
    <string name="baike_buy">酒仙购买</string>
    <string name="baike_chateau">酒庄</string>
    <string name="baike_country">国家</string>
    <string name="baike_date">年份</string>
    <string name="baike_date_value">年</string>
    <string name="baike_description">酒品描述</string>
    <string name="baike_feel">口感</string>
    <string name="baike_price">市场参考价</string>
    <string name="baike_title">美酒信息</string>
    <string name="baike_type">类型</string>
    <string name="bao_kuan_recommed_state">bao_kuan_recommed_state -- > %s</string>
    <string name="become_member_character">成为会员</string>
    <string name="beer_brand">啤酒品牌</string>
    <string name="beer_coupon_fill">啤酒券满</string>
    <string name="bind_fail">绑定失败</string>
    <string name="bind_phone_check">绑定手机验证</string>
    <string name="bind_succeed">绑定成功</string>
    <string name="birthday">生日</string>
    <string name="birthday_gift">生日有礼，填写后不可修改</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="brand">品牌</string>
    <string name="brower_title">京东支付</string>
    <string name="browse_history">浏览足迹</string>
    <string name="brvah_app_name">Library</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="btn__create_chatroom">创建聊天室</string>
    <string name="btn__create_private_group">创建讨论组</string>
    <string name="btn__create_public_group">创建公开群</string>
    <string name="btn_add_member">添加群成员</string>
    <string name="buy_now_dialog_buylimit">（每人限购%s瓶）</string>
    <string name="buy_now_dialog_choice">选择</string>
    <string name="buy_now_dialog_identifier">商品编号: %s</string>
    <string name="buy_now_dialog_num">数量</string>
    <string name="buy_success">加入购物车成功</string>
    <string name="buy_time">购买时间:</string>
    <string name="camera_fail">拍照失败</string>
    <string name="camera_init_error">获取摄像头信息失败</string>
    <string name="can_not_find_version_name" />
    <string name="cancel">取消</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="cancel_collect_success">取消收藏成功</string>
    <string name="cancel_order">取消订单</string>
    <string name="cancel_other_shop_order_alert_msg">商家订单需要审核后取消，订单取消后不能恢复，已支付金额退回原支付账号，是否申请取消？</string>
    <string name="cancel_other_shop_order_check_mgs">您的取消申请已提交给商家，请等待商家审核</string>
    <string name="cancel_pay_msg">商品一眨眼可能就没有了,确定要放弃付款吗?</string>
    <string name="cancel_pay_sure">去意已决</string>
    <string name="cancel_pay_think">我再想想</string>
    <string name="cancel_pay_type">用户取消%s</string>
    <string name="capture_wine_title">拍酒标</string>
    <string name="capturewinecamera_list">（即将上线）</string>
    <string name="cart_add_cart_success">已经成功加入购物车</string>
    <string name="cart_add_success">恭喜，购买成功</string>
    <string name="cart_add_to_favorites">移入收藏</string>
    <string name="cart_alert_goto_freepost">进入包邮专区</string>
    <string name="cart_alert_no_goods">%s无货</string>
    <string name="cart_alert_nofree">不凑单继续下单</string>
    <string name="cart_alert_offline">%s已下架</string>
    <string name="cart_alert_out_of_limited">%s超出限购</string>
    <string name="cart_alert_out_of_stock">%s库存不足</string>
    <string name="cart_alert_think_again">再想想</string>
    <string name="cart_btn_dabaojia_name">打包价</string>
    <string name="cart_btn_jiage_name">价格</string>
    <string name="cart_btn_taozhuangjia_name">套装价</string>
    <string name="cart_commit">去结算(%s)</string>
    <string name="cart_commit_checked_empty">请选择要购买的商品</string>
    <string name="cart_commit_empty">去结算</string>
    <string name="cart_coupon_can_receive_sub_title">领取后可用于购物车内商品</string>
    <string name="cart_coupon_can_receive_title">可领优惠券</string>
    <string name="cart_coupon_empty_msg">暂无可领取优惠券</string>
    <string name="cart_coupon_get_success">领取成功</string>
    <string name="cart_coupon_product_title">购物车内适用商品</string>
    <string name="cart_coupon_received_sub_title">以下是您账户里可用于购物车内商品的优惠券</string>
    <string name="cart_coupon_received_title">已领优惠券</string>
    <string name="cart_coupon_str">领券</string>
    <string name="chat_expose_type_country_safe">危害国家安全</string>
    <string name="chat_expose_type_false_info">虚假信息</string>
    <string name="chat_expose_type_personal_attack">人身攻击</string>
    <string name="chat_expose_type_plagiarism">涉嫌抄袭</string>
    <string name="chat_expose_type_pornography">色情淫秽</string>
    <string name="chat_expose_type_rubbish">广告垃圾</string>
    <string name="clean">清空</string>
    <string name="clear_cache">清除缓存</string>
    <string name="confirm">确定</string>
    <string name="encourage_one_time">鼓励一下</string>
    <string name="foot_print_goods">浏览足迹</string>
    <string name="foot_print_list_empty">您还没浏览商品,</string>
    <string name="jxw_sub_brand_boutique_app_recommend">酒仙网旗下精品应用推荐</string>
    <string name="kick_logout">你的账号已在其他终端登录,重新登录</string>
    <string name="login_btn">登录</string>
    <string name="login_cooperate">使用合作账号登录</string>
    <string name="login_find_psw">忘记密码？</string>
    <string name="login_hint_psw">密码</string>
    <string name="login_out">退出登录</string>
    <string name="login_phone_fast">手机快捷登录</string>
    <string name="login_title_account">账号登录</string>
    <string name="message_push_tip">接收通知</string>
    <string name="monitor_active">自动监控中</string>
    <string name="monitor_close_info">长按关闭监控</string>
    <string name="ok">确定</string>
    <string name="order_commit_fail_detail">赶快重新支付吧！</string>
    <string name="order_commit_fail_info">哎呀，你刚刚的订单支付不成功</string>
    <string name="order_commit_fail_order_detail">查看订单详情</string>
    <string name="order_commit_fail_pay_again">重新支付</string>
    <string name="order_commit_fail_pick">继续逛逛</string>
    <string name="product_detail_day">天</string>
    <string name="product_detail_hour">小时</string>
    <string name="product_detail_min">分</string>
    <string name="product_detail_sec">秒</string>
    <string name="product_detail_surplus">剩余</string>
    <string name="register_hind_tishi_2">请输入11位手机号</string>
    <string name="register_jiuxian_title">注册</string>
    <string name="setting">设置</string>
</resources>