<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <com.zxin.root.view.CommonCrosswiseBar
        android:id="@+id/ccb_jiuxian_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_background="@color/color_ffffff"
        app:isTopBar="true"
        app:left_button_image="@mipmap/ic_black_left_arrow"
        app:show_left_button="true"
        app:title_text="@string/foot_print_goods"
        app:title_textColor="@color/color_333333"
        app:title_textSize="@dimen/size_18px"
        app:right_button_textColor="@color/color_666666"
        app:right_button_textSize="15px"
        app:right_button_text="@string/clean"
        />

    <com.zxin.root.view.RefreshCommonView
        android:id="@+id/rcv_comments_commonlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:bottonViewText="我是有底线的~~~"
        app:content_bgColor="@color/background_color"
        app:noneImage="@drawable/icon_have_no_commodity"
        app:noneText="@string/foot_print_list_empty"
        app:orientation="vertical"
        app:vessel_type="RecyclerView" />

</LinearLayout>